The following list contains all changes to pgAdmin3, as present in svn. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2005-10-20 AP  1.4B4 Fix Maintenance crash of disconnected DBs (r: A.J.Langereis)
    <li>2005-10-20 AP  1.4B4 Fix Unicode/pgsql80win32 hint (r: Oryza Triznyak)
    <li>2005-10-20 DP  1.4B4 Ensure the user can cancel the maintenance dialogue when it is running.
    <li>2005-10-20 DP  1.4B4 Fix the recent files list on the config file editor. (r: Miha Radej)
    <li>2005-10-18 DP  1.4B3 Correct font size on Splash and About forms on Mac.
    <li>2005-10-18 AP  1.4B3 Prevent refresh of the servers treeview node
    <li>2005-10-18 DP  1.4B3 Fix the autoconf code to ensure the debug and static options do what they should, and that a unicode wx build is used 
    <li>2005-10-18 DP  1.4B3 Ensure strings can be editted in the data grid on Mac.
    <li>2005-10-14 DP  1.4B3 Prevent errors in the logger causing crashes
    <li>2005-10-14 DP  1.4B3 Use a sensible default location for the logfile
    <li>2005-10-12 AP  1.4B3 Fix 'ambiguous proname column' bug for servers < 8.0
    <li>2005-10-12 AP  1.4B3 Fix count crash on tables (r: Merlin Moncure)
    <li>2005-10-12 AP  1.4B3 Fix slony detection on tables for pgsql7.x
    <li>2005-10-08 AP  1.4B2 Fix "New" context menu crash on disconnected server (r: Tomasz Rybak)
    <li>2005-10-08 AP  1.4B2 Check for catalog access privilege in pg_authid and pg_depend (r: Christopher St.John)
    <li>2005-10-04 AP  1.4B1 -t cmd line option to enable language debugging
    <li>2005-10-03 AP  1.4   pg_autovacuum support
    <li>2005-10-03 AP  1.4   upgrade slony node
    <li>2005-09-17 AP  1.4   Allow Query Tool to use multiple connections