@@ -1,5 +1,6 @@
 <b>Known issues</b>
 <ul>
+	<li>[Property] Working with property dialog after the corresponding node is refreshed crashes
 	<li>[Edit grid] Editing very large columns freezes (might be restricted to bytea)
 	<li>[Edit grid] bool editing doesn't know NULL; major redesign needed
 	<li>[Edit grid] sqlGridTextEditor is broken on Mac. We're currently using wxGridCellAutoWrapStringEditor which works but isn't overly user friendly
