@@ -22,6 +22,7 @@ public:
     pgConstraintCollection(pgaFactory *factory, pgTable *table);
     ~pgConstraintCollection();
     wxString GetHelpPage(bool forCreate) const { return wxT("pg/sql-altertable"); }
+    bool CanCreate() { return false; }
     wxMenu *GetNewMenu();
 
     void ShowTreeDetail(ctlTree *browser, frmMain *form, ctlListView *properties, ctlSQLBox *sqlPane);
