@@ -77,7 +77,6 @@ void pgConstraintCollection::ShowTreeDetail(ctlTree *browser, frmMain *form, ctl
 pgConstraintFactory::pgConstraintFactory() 
 : pgTableObjFactory(__("Constraint"), 0, 0, 0)
 {
-    metaType = PGM_CHECK;
 }
 
 pgCollection *pgConstraintFactory::CreateCollection(pgObject *obj)
