@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2005-10-21 AP  1.4B4 Fix Create a.. toolbar button on collection (r: Li Fei)
     <li>2005-10-20 AP  1.4B4 Fix Maintenance crash of disconnected DBs (r: A.J.Langereis)
     <li>2005-10-20 AP  1.4B4 Fix Unicode/pgsql80win32 hint (r: Oryza Triznyak)
     <li>2005-10-20 DP  1.4B4 Ensure the user can cancel the maintenance dialogue when it is running.
